web/src/assets/css/main.css
/* ... */
.navbar-collapse ul li:hover {
    background-color: #ffffff;
}

.navbar-collapse ul li:hover a {
    color: #ED1C24 !important;
}

.navbar-collapse ul li:hover .mainMenu {
    color: #ED1C24 !important;
}

.navbar-collapse ul li.active {
    background-color: #ffffff;
}

.navbar-collapse ul li.active a {
    color: #ED1C24 !important;
}

.mobile-menu {
    display: none;
}

.sticky-header {
    width: 100%;
    z-index: 999;
}

.navbar-nav .nav-item .nav-link {
    font-weight: 500;
}

.menu-sticky {
    background: #ED1C24;
}

.nav-item {
    position: relative;
    top: 12px;
    margin-right: 2px;
}

.navbar-nav {
    margin-bottom: 20px;
}

.navbar .navbar-collapse .navbar-nav li a {
    color: #ffffff;
}

.navbar-icon i {
    color: #ffffff;
}

.navbar-nav .nav-item .nav-link span {
    margin-right: 5px;
}

.dropdown-toggle::after {
    display: none;
}

.dropdown-menu {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1000;
    display: none;
    float: left;
    min-width: 10rem;
    padding: 30px;
    margin: 0px !important;
    font-size: 1rem;
    color: #212529;
    text-align: left;
    list-style: none;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid rgba(0, 0, 0, .15);
    border-radius: .25rem;
    overflow-y: scroll;
    height: 80vh;
}

.navbar {
    padding: 0px 0px;
}

.responsive-menu .c-2:hover .dropdown-menu {
    display: block !important;
}

.text-th {
    padding-bottom: 10px !important;
}

.dropdown-menu ul li {
    padding: 0px 0px;
    color: #726E6E;
    font-weight: 500;
}

.dropdown-menu ul .text-th {
    color: #000000;
    font-weight: 600;
    font-size: 16px;

}

.dropdown-img p {
    margin-top: 16px;
    font-weight: 500;
}
.modal-dialog {
    max-width: 650px !important;
    margin: 11.75rem auto;
}

.header_chart .widget-cart button {
    background: transparent;
}

.header_chart .widget-cart button:focus {
    box-shadow: none;
    outline: none;
}

.modal-content .cart-tittle {
    text-align: center;
    margin-bottom: 30px;
}

.modal-content .cart-tittle h2 {
    margin-bottom: 20px;
}

.modal-content .cart-tittle p {
    color: #979494;
    text-align: center;
    margin-bottom: 20px;
}

.modal-body .cart-list {
    margin-bottom: 30px;
}

.modal-body .cart-list ul {
    display: flex;
}

.modal-body .cart-list ul .text-1 {
    margin-right: 40%;
    margin-left: 8%;
}

.modal-body .cart-list ul .text-2 {
    margin-right: 40px;
}

.modal-body .cart-list ul li a {
    font-weight: 600;
}

.cart-details .bag-items .bagitem-1 p span {
    margin-left: 85px;
}

.modal-body .total {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 20px;
}

.modal-body .total span {
    margin-right: 70px;
}

.modal-body .total p {
    font-weight: 500;
    font-size: 20px;
    margin-right: 65px;
}

.cart-btn {
    display: flex;
    justify-content: space-between;
}

.cart-btn .btn1 {
    background: transparent;
    border: 1px solid #979494;
    padding: 10px 40px;
    color: #979494;
}

.cart-btn .btn2 {
    padding: 10px 80px;
    background: #ED1C24;
    color: #ffffff;
}

.bagitem-1 .text p button {
    outline: none;
}


.modal-title {
    margin-left: 37%;
}

.modal-header {
    border-bottom: none;
}

.modal-content {
    padding: 30px 20px 0px 20px;
}

.modal-header {
    padding: 10px 0px;
}

.modal-body .bagitem-1 .text p span {
    margin-left: 72px;
    font-size: 24px;
}

#banner-section {
    padding: 30px 0px;
}

#banner-section {
    background: #f6f6f6;
}

.banner-contant {
    margin-top: 80px;
}

.banner-contant .h1first {
    font-size: 65px;
    line-height: 7.9rem;
}

.banner-contant .h12nd {
    font-size: 65px;
    color: #ED1C24;
    margin-bottom: 30px;
}

.banner-contant p {
    margin-bottom: 30px;
    color: #605959;
    letter-spacing: 0.5px;
}

.banner-contant button {
    background: transparent;
}

.banner-contant button a {
    color: #ED1C24;
    text-decoration: underline;
}

.banner-contant button a i {
    margin-left: 5px;
    border: 1px solid;
    width: 16px;
    height: 16px;
    border-radius: 500px;
}

.slider-img {
    margin-top: 60px;
}

.slider-img img {
    position: relative;
}

.slider-img .banner-parsent {
    position: absolute;
    width: 50px;
    height: 50px;
    border-radius: 50px;
    background: #ED1C24;
    opacity: 0.8;
    top: 20%;
    left: 27%;
}

.banner-parsent p {
    padding: 12px 0px;
    color: #ffffff;
}

.banner-slider .owl-dots .owl-dot.active span {
    background: #ED1C24 !important;
}

.banner-slider .owl-dots .owl-dot:focus {
    outline: none;
}

.banner-serv {
    margin-bottom: 30px;
    padding: 20px;
    background: #ffffff;
}

.banner-serv img {
    margin-bottom: 10px;
    width: 30%;
}

.banner-serv .bserp1 {
    font-size: 16px;
    color: #ED1C24;
}

.banner-serv .bserp2 {
    font-size: 12px;
    color: #767575;
}

.banner-serv p {
    margin-bottom: 0px !important;
}

.carousel-indicators .active {
    background-color: #ED1C24 !important;
}

.carousel-indicators li {
    background-color: #D6D6D6 !important;
    width: 10px !important;
    height: 10px !important;
    border: 1px !important;
    border-radius: 50px !important;
    margin: 5px 7px !important;
}

.carousel.slide {
    height: 100% !important;
}
.banner-serv a {
    text-decoration: underline;
    color: #ED1C24;
}

.banner-serv a i {
    margin-left: 5px;
    border: 1px solid;
    width: 16px;
    height: 16px;
    border-radius: 500px;
}

.owl-carousel .owl-nav {
    position: absolute;
    bottom: -30px;
    right: 48%;
}

.owl-carousel .owl-nav button {
    outline: none;
}

.owl-carousel .owl-nav button span {
    font-size: 20px;
}

.owl-theme .owl-nav [class*=owl-]:hover {
    background: transparent;
    color: #000000;
}
/* ... */

